<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.home.RektorFragment">

    <TextView
        android:id="@+id/tv_rektor_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/arbutus_slab"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="16dp"
        android:text="@string/header_rektor" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRektor"
        android:layout_width="290dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/tv_rektor_image"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_photo_rektor"
            android:layout_margin="8dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_rektor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:text="@string/rektor_name" />

    <TextView
        android:id="@+id/tv_rektor_description"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textSize="19sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:justificationMode="inter_word"
        android:text="@string/description_rektor" />

</LinearLayout>