<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/uns1"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="165dp"
        android:background="@drawable/textbox"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/header_home"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/textbox"
        android:fontFamily="@font/montserrat"
        android:justificationMode="inter_word"
        android:padding="9dp"
        android:text="@string/bio_home"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rektorat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_rektor" />

</LinearLayout>