<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:padding="5dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/arbutus_slab"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/headerProfile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="186dp"
            android:layout_height="225dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                android:contentDescription="@string/descProfile"
                android:src="@drawable/addin" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_profile_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="9dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:text="@string/profile_data"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/share"
            android:drawablePadding="-50dp"
            android:paddingStart="20dp"
            android:text="@string/share_button"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</ScrollView>